--- a/views/auth.jade
+++ b/views/auth.jade
@@ -1,6 +1,6 @@
 extends layout/main
 block css   
-    link(rel="stylesheet", type="text/css", href="/css/auth.css")
+    link(rel="stylesheet", type="text/css", href="css/auth.css")
 block js
   script(type="application/javascript", src="js/auth.js")
 block content
