--- a/views/layout/main.jade
+++ b/views/layout/main.jade
@@ -3,13 +3,13 @@ html
   head
     block title
         title= title    
-    script(src="/vendor/jquery/dist/jquery.min.js")
+    script(src="vendor/jquery/dist/jquery.min.js")
     script(src="/vendor/bootstrap/dist/js/bootstrap.min.js")
     script(src="/js/common/staff.js")
     link(href="/vendor/bootstrap/dist/css/bootstrap.min.css", rel="stylesheet")
     link(href="/vendor/font-awesome/css/font-awesome.min.css", rel="stylesheet")    
-    link(rel="stylesheet", type="text/css", href="/css/common/staff.css")
-    link(rel="stylesheet", type="text/css", href="/css/config.css")
+    link(href="/css/common/staff.css", rel="stylesheet")
+    link(href="/css/config.css", rel="stylesheet")   
     block css
   body
     block navbar
